--- a/Translation/Indonesia/Text Strings.json
+++ b/Translation/Indonesia/Text Strings.json
@@ -1,111 +1,111 @@
 {
-  "Show all available commands.": "",
-  "Show all enabled modules.": "",
-  "Reset your settings to default. Useful when you messed up with the settings": "",
-  "Turn on/off Advance Target Information": "",
-  "Unlock and set FPS. Value: 1-120": "",
-  "Refresh client and dump cache.": "",
-  "Check your current latency.": "",
-  "Reconnect when you get disconnected.": "",
+  "Show all available commands.": "Menampilkan seluruh perintah yang ada",
+  "Show all enabled modules.": "Menampilkan seluruh modul yang ada",
+  "Reset your settings to default. Useful when you messed up with the settings": "Memuat ulang setting ke setelan awal. Berguna ketika kamu melakukan kesalahan konfigurasi",
+  "Turn on/off Advance Target Information": "Menyalakan atau mematikan informasi dari target",
+  "Unlock and set FPS. Value: 1-120": "Membuka dan mengatur FPS. Nilai: 1-120",
+  "Refresh client and dump cache.": "Memuat ulang client dan membuang data sementara",
+  "Check your current latency.": "Memeriksa latency mu",
+  "Reconnect when you get disconnected.": "Menyambung ulang ketika kamu terputus sambungan",
 
   "__@afk__": "__@afk__",
-  "Turn on/off Auto TrickDead": "",
-  "Set hp/sp conditions to trigger.": "",
+  "Turn on/off Auto TrickDead": "Menyalakan atau mematikan TrickDead",
+  "Set hp/sp conditions to trigger.": "Menyetel hp/sp untuk trigger kondisi",
 
   "__@as__": "__@as__",
-  "Turn on/off Auto Skill EX": "",
-  "List all available skills that can be extended.": "",
-  "Set your desired manual skill slot as AUTO": "",
-  "Reset current list.": "",
+  "Turn on/off Auto Skill EX": "Menyalakan atau mematikan Skill EX",
+  "List all available skills that can be extended.": "Memunculkan daftar semua skill yang bisa ditambahkan",
+  "Set your desired manual skill slot as AUTO": "Menyetel manual skill sebagai AUTO yang kamu inginkan",
+  "Reset current list.": "Menyetel ulang daftar yang sudah didaftarkan",
 
   "__@selftarget__": "__@selftarget__",
-  "Turn on/off Self-Target Module.": "",
-  "Activate Self-Target for all skills.": "",
-  "List all ID of AoE skills.": "",
-  "Set specific skill id as self-target.": "",
-  "Reset selt-target list.": "",
+  "Turn on/off Self-Target Module.": "Menyalakan atau mematikan modul Self-Target",
+  "Activate Self-Target for all skills.": "Mengaktifkan Self-Target untuk semua skill",
+  "List all ID of AoE skills.": "Menampilkan semua daftar AOE skill id",
+  "Set specific skill id as self-target.": "Menyetel spesifik skill id menjadi Self-Target",
+  "Reset selt-target list.": "Menyetel ulang Self-Target daftar",
 
   "__priestsupport__": "__priestsupport__",
-  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "",
-  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "",
-  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "",
-  "Reset buff list.": "",
-  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "",
+  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "Menghapus pembatasan buff dari beberapa buff yang hanya diberikan ketika pemimpin didalam pertempuran",
+  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "Buff spesifik karakter walaupun tidak party. (terbatas untuk buff tidak party Heal/Kyrie/Bless/Resu)",
+  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "Menyetel skill id tertentu untuk buff (Jalan Pintas: kirim pesan '-buffme' ke priest)",
+  "Reset buff list.": "Menyetel ulang daftar buff",
+  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "Menyalakan atau mematikan priest auto debuffer. (Lex dan Decrease Agi",
 
   "__autoquest__": "__autoquest__",
-  "Turn on/off Quest Assistant.": "",
-  "Turn on/off Questing Warping upon accepting quest.": "",
+  "Turn on/off Quest Assistant.": "Menyalakan atau mematikan bantuan misi",
+  "Turn on/off Questing Warping upon accepting quest.": "Menyalakan atau mematikan warp quest ketika menerima misi",
 
   "__autosuicide__": "__autoquest__",
-  "Turn on/off Auto Suicide.": "",
-  "Save current coordinate and map for leveling down.": "",
+  "Turn on/off Auto Suicide.": "Menyalakan atau mematikan auto bunuh diri",
+  "Save current coordinate and map for leveling down.": "Menyimpan posisi koordinat dan map untuk menurunkan leveling",
 
   "__lockspot__": "__lockspot__",
-  "Turn on/off lockspot module.": "",
-  "Set farming radius. Radius can be set from 0 to 200.": "",
-  "Save your current coordinate as return piont.": "",
+  "Turn on/off lockspot module.": "Menyalakan atau mematikan modul lockspot",
+  "Set farming radius. Radius can be set from 0 to 200.": "Menyetel radius grinding. Radius bisa di setel dari 0 sampai 200",
+  "Save your current coordinate as return piont.": "Menyimpan koordinat sekarang sebagai titik semula",
 
   "__autoflywing__": "__autoflywing__",
-  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "",
+  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "Menyalakan atau mematikan ketika HP dibawah 30%. Akan menggunakan TrickDead untuk menyembuhkan HP",
 
   "__calculator__": "__calculator__",
-  "Turn on/off EXP calculator.": "",
-  "Reset EXP calculator.": "",
-  "Turn on/off ZENY calculator.": "",
-  "Reset ZENY calculator.": "",
-  "Access endless tower anywhere.": "",
-  "Jump to specific floor.": "",
-  "Turn on/off UI Warp & UI Storage for NPCs": "",
-  "Auto accepts incoming PT request.": "",
-  "Auto accepts incoming ET request.": "",
-  "Auto accepts incoming Follow request.": "",
+  "Turn on/off EXP calculator.": "Menyalakan atau mematikan kalkulator EXP",
+  "Reset EXP calculator.": "Menyetel Ulang Kalkulator EXP",
+  "Turn on/off ZENY calculator.": "Menyalakan atau mematikan kalkulator Zeny",
+  "Reset ZENY calculator.": "Menyetel Ulang Kalkulator Zeny",
+  "Access endless tower anywhere.": "Mengakses ET dimana saja",
+  "Jump to specific floor.": "Lompat ke lantai yang dituju ",
+  "Turn on/off UI Warp & UI Storage for NPCs": "Menyalakan atau mematikan UI warp dan UI storage untuk NPC",
+  "Auto accepts incoming PT request.": "Auto terima permintaan PT",
+  "Auto accepts incoming ET request.": "Auto terima permintaan ET",
+  "Auto accepts incoming Follow request.": "Auto terima permintaan Follow",
 
   "__follow__": "_follow_",
-  "Turn on/off Auto Follow for Non-Party.": "",
-  "Set leader id to follow.": "",
-  "Set minimum follow radius.": "",
+  "Turn on/off Auto Follow for Non-Party.": "Menyalakan atau mematikan auto Follow untuk non-party",
+  "Set leader id to follow.": "Menyetel id pemimpin untuk di follow",
+  "Set minimum follow radius.": "Menyetel jarak minimum follow",
 
   "_hplant_": "_hplant_",
-  "Turn on/off Auto-Cast Hell Plant": "",
-  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "",
+  "Turn on/off Auto-Cast Hell Plant": "Menyalakan atau mematikan Auto-Cast Hell Plant",
+  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "Menyimpan koordinat saat ini sebagai letak Hell Plant",
 
   "_mvp_module_": "_mvp module_",
-  "Turn on/off MVP modoule.": "",
-  "Set tracking to auto or manual.": "",
-  "Set notification and target to MVP/MINI/ALL only.": "",
-  "Filter MVP Boards to MVP/MINI/ALL only.": "",
+  "Turn on/off MVP modoule.": "Menyalakan atau mematikan Modul MVP",
+  "Set tracking to auto or manual.": "Menyetel jalur untuk auto atau manual",
+  "Set notification and target to MVP/MINI/ALL only.": "Menyetel notifikasi dan target untuk MVP/MINI/ALL",
+  "Filter MVP Boards to MVP/MINI/ALL only.": "Filter papan MVP untuk MVP/MINI/ALL",
 
   "_class_specific_": "class specific",
-  "Turn on/off SAGE auto switch bolts module.": "",
-  "Turn on/off BOW class auto switch arrows module.": "",
-  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "",
+  "Turn on/off SAGE auto switch bolts module.": "Menyalakan atau mematikan Auto Bolt modul Sage",
+  "Turn on/off BOW class auto switch arrows module.": "Menyalakan atau mematikan Auto Switch panah modul untuk kelas BOW",
+  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "Menyalakan atau mematikan auto magnum break buff untuk SWORDSMAN",
 
   "_spot_search_": "spot search",
-  "List all available monsters and their ids in your current map.": "",
-  "Go to the nearest respawn spot of the selected monster.": "",
+  "List all available monsters and their ids in your current map.": "Daftar semua monster yang tersedia dan menunjukkan IDnya di map saat ini",
+  "Go to the nearest respawn spot of the selected monster.": "Pergi ke dekat titik respawn monster yang dipilih",
 
-  "_gearswitch_": "",
-  "Save your current equipment and card preset to specific slot.": "",
-  "Increase/Decrease maximum emoji gear switch.": "",
+  "_gearswitch_": "Perpindahan equipment",
+  "Save your current equipment and card preset to specific slot.": "Menyimpan equip saat ini dan kartu di spesifikasi slot",
+  "Increase/Decrease maximum emoji gear switch.": "Menaikkan/Menurunkan emoji maximum pindah equipment",
 
-  "_market_": "",
-  "Open Exchange Shop": "",
-  "Open Guild Donate Window": "",
-  "Open Shop Window": "",
+  "_market_": "Pasar",
+  "Open Exchange Shop": "Membuka pasar exchange",
+  "Open Guild Donate Window": "Membuka papan Guild Donate",
+  "Open Shop Window": "Membuka papan Pasar",
 
-  "_warp_": "",
-  "Change channel. (Channel or Country Code + Channel)": "",
-  "Drop you to your born point.": "",
-  "List all unlocked map.": "",
-  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "",
-  "Same as butterfly wing effect.": "",
-  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "",
-  "Turn on/off warp emoji shortcuts.": "",
+  "_warp_": "Warp",
+  "Change channel. (Channel or Country Code + Channel)": "Pindah channgel. (Channel atau kode negara + Channel)",
+  "Drop you to your born point.": "Kembali ke posisi awal poin",
+  "List all unlocked map.": "Daftar seluruh map yang telah di buka",
+  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "Pergi ke spesifik Map. (Membutuhkan: Cats/Pets/Npcs",
+  "Same as butterfly wing effect.": "Sama seperti efek butterfly wing",
+  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "Menggunakan layanan kafra warp dimana saja. (Membutuhkan: Cats/Pets/Npcs) ",
+  "Turn on/off warp emoji shortcuts.": "Menyalakan atau mematikan shortcuts emoji warp",
 
   "_multitarget_and_flylock_": "",
-  "List all available monsters and their ids in your current map.": "",
-  "Set multiple ids as Auto-Battle target.": "",
-  "Turn on/off Multi-Mob feature.": "",
-  "Turn on/off FlyLock feature.": "",
-  "Set multiple ids as FlyLock target.": ""
+  "List all available monsters and their ids in your current map.": "Daftar seluruh monster yang tersedia dan IDnya dimap saat ini",
+  "Set multiple ids as Auto-Battle target.": "Menyetel ID beberapa sebagai target Auto-Battle",
+  "Turn on/off Multi-Mob feature.": "Menyalakan atau mematikan fitur Multi-Mob",
+  "Turn on/off FlyLock feature.": "Menyalakan atau mematikan fitur FlyLock",
+  "Set multiple ids as FlyLock target.": "Menyetel ID beberapa sebagai taget FlyLock"
 }
