--- a/Translation/Indonesia/Text Strings.json
+++ b/Translation/Indonesia/Text Strings.json
@@ -1,111 +1,111 @@
 {
-  "Show all available commands.": "Menampilkan seluruh perintah yang ada",
-  "Show all enabled modules.": "Menampilkan seluruh modul yang ada",
-  "Reset your settings to default. Useful when you messed up with the settings": "Memuat ulang setting ke setelan awal. Berguna ketika kamu melakukan kesalahan konfigurasi",
-  "Turn on/off Advance Target Information": "Menyalakan atau mematikan informasi dari target",
-  "Unlock and set FPS. Value: 1-120": "Membuka dan mengatur FPS. Nilai: 1-120",
-  "Refresh client and dump cache.": "Memuat ulang client dan membuang data sementara",
-  "Check your current latency.": "Memeriksa latency mu",
-  "Reconnect when you get disconnected.": "Menyambung ulang ketika kamu terputus sambungan",
+  "Show all available commands.": "Tampilkan semua perintah tersedia.",
+  "Show all enabled modules.": "Tampilkan semua modul aktif",
+  "Reset your settings to default. Useful when you messed up with the settings": "Atur ulang pengaturan ke awal. Berguna ketika Anda mengacaukan pengaturan.",
+  "Turn on/off Advance Target Information": "Hidup/mati-kan Informasi Target Lanjutan",
+  "Unlock and set FPS. Value: 1-120": "Buka dan atur FPS. Nilai: 1-120",
+  "Refresh client and dump cache.": "Segarkan klien dan buang tembolok.",
+  "Check your current latency.": "Cek latensi saat ini.",
+  "Reconnect when you get disconnected.": "Hubungkan ketika terputus.",
 
   "__@afk__": "__@afk__",
-  "Turn on/off Auto TrickDead": "Menyalakan atau mematikan TrickDead",
-  "Set hp/sp conditions to trigger.": "Menyetel hp/sp untuk trigger kondisi",
+  "Turn on/off Auto TrickDead": "Hidup/mati-kan Auto TrickDead",
+  "Set hp/sp conditions to trigger.": "Atur kondisi hp/sp untuk memicu.",
 
   "__@as__": "__@as__",
-  "Turn on/off Auto Skill EX": "Menyalakan atau mematikan Skill EX",
-  "List all available skills that can be extended.": "Memunculkan daftar semua skill yang bisa ditambahkan",
-  "Set your desired manual skill slot as AUTO": "Menyetel manual skill sebagai AUTO yang kamu inginkan",
-  "Reset current list.": "Menyetel ulang daftar yang sudah didaftarkan",
+  "Turn on/off Auto Skill EX": "Hidup/mati-kan Auto Skill EX",
+  "List all available skills that can be extended.": "Daftar semua skill tersedia yang dapat diperluas.",
+  "Set your desired manual skill slot as AUTO": "Atur slot skill manual yang diinginkan sebagi AUTO",
+  "Reset current list.": "Atur ulang daftar saat ini",
 
   "__@selftarget__": "__@selftarget__",
-  "Turn on/off Self-Target Module.": "Menyalakan atau mematikan modul Self-Target",
-  "Activate Self-Target for all skills.": "Mengaktifkan Self-Target untuk semua skill",
-  "List all ID of AoE skills.": "Menampilkan semua daftar AOE skill id",
-  "Set specific skill id as self-target.": "Menyetel spesifik skill id menjadi Self-Target",
-  "Reset selt-target list.": "Menyetel ulang Self-Target daftar",
+  "Turn on/off Self-Target Module.": "Hidup/mati-kan Modul Self-Target",
+  "Activate Self-Target for all skills.": "Aktivasi Self-Target untuk semua skill.",
+  "List all ID of AoE skills.": "Daftar semua ID skill AoE.",
+  "Set specific skill id as self-target.": "Atur ID skill spesifik sebagai Self-Target.",
+  "Reset selt-target list.": "Atur ulang daftar Self-Target.",
 
   "__priestsupport__": "__priestsupport__",
-  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "Menghapus pembatasan buff dari beberapa buff yang hanya diberikan ketika pemimpin didalam pertempuran",
-  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "Buff spesifik karakter walaupun tidak party. (terbatas untuk buff tidak party Heal/Kyrie/Bless/Resu)",
-  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "Menyetel skill id tertentu untuk buff (Jalan Pintas: kirim pesan '-buffme' ke priest)",
-  "Reset buff list.": "Menyetel ulang daftar buff",
-  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "Menyalakan atau mematikan priest auto debuffer. (Lex dan Decrease Agi",
+  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "Hapus batasan buff dari beberapa buff yang hanya dirapal ketika Leader dalam pertarungan.",
+  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "Mem-buff karakter spesifik bahkan tanpa party. (Terbatas pada buff non-party Heal/Kyrie/Bless/Resu)",
+  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "Atur ID spesifik untuk buff. (Jalan Pintas: beri pesan '-buffme' kepada Priest)",
+  "Reset buff list.": "Atur ulang daftar buff.",
+  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "Hidup/mati-kan auto debuffer priest. (Lex dan Decrease AGI)",
 
   "__autoquest__": "__autoquest__",
-  "Turn on/off Quest Assistant.": "Menyalakan atau mematikan bantuan misi",
-  "Turn on/off Questing Warping upon accepting quest.": "Menyalakan atau mematikan warp quest ketika menerima misi",
+  "Turn on/off Quest Assistant.": "Hidup/mati-kan Quest Assistant.",
+  "Turn on/off Questing Warping upon accepting quest.": "Hidup/mati-kan Warp Otomatis saat menerima Quest.",
 
   "__autosuicide__": "__autoquest__",
-  "Turn on/off Auto Suicide.": "Menyalakan atau mematikan auto bunuh diri",
-  "Save current coordinate and map for leveling down.": "Menyimpan posisi koordinat dan map untuk menurunkan leveling",
+  "Turn on/off Auto Suicide.": "Hidup/mati-kan Auto Suicide.",
+  "Save current coordinate and map for leveling down.": "Simpan peta dan koordinat saat ini untuk menurunkan level.",
 
   "__lockspot__": "__lockspot__",
-  "Turn on/off lockspot module.": "Menyalakan atau mematikan modul lockspot",
-  "Set farming radius. Radius can be set from 0 to 200.": "Menyetel radius grinding. Radius bisa di setel dari 0 sampai 200",
-  "Save your current coordinate as return piont.": "Menyimpan koordinat sekarang sebagai titik semula",
+  "Turn on/off lockspot module.": "Hidup/mati-kan modul lockspot.",
+  "Set farming radius. Radius can be set from 0 to 200.": "Atur radius farming. Radius dapat diatur dari 0 sampai 200.",
+  "Save your current coordinate as return piont.": "Simpan koordinat saat ini sebagai titik kembali.",
 
   "__autoflywing__": "__autoflywing__",
-  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "Menyalakan atau mematikan ketika HP dibawah 30%. Akan menggunakan TrickDead untuk menyembuhkan HP",
+  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "Hidup/mati-kan auto flywing ketika HP jatuh di bawah 30%. Akan menggunakan TrickDead untuk mengembalikan HP.",
 
   "__calculator__": "__calculator__",
-  "Turn on/off EXP calculator.": "Menyalakan atau mematikan kalkulator EXP",
-  "Reset EXP calculator.": "Menyetel Ulang Kalkulator EXP",
-  "Turn on/off ZENY calculator.": "Menyalakan atau mematikan kalkulator Zeny",
-  "Reset ZENY calculator.": "Menyetel Ulang Kalkulator Zeny",
-  "Access endless tower anywhere.": "Mengakses ET dimana saja",
-  "Jump to specific floor.": "Lompat ke lantai yang dituju ",
-  "Turn on/off UI Warp & UI Storage for NPCs": "Menyalakan atau mematikan UI warp dan UI storage untuk NPC",
-  "Auto accepts incoming PT request.": "Auto terima permintaan PT",
-  "Auto accepts incoming ET request.": "Auto terima permintaan ET",
-  "Auto accepts incoming Follow request.": "Auto terima permintaan Follow",
+  "Turn on/off EXP calculator.": "Hidup/mati-kan kalkulator EXP.",
+  "Reset EXP calculator.": "Atur ulang kalkulator EXP.",
+  "Turn on/off ZENY calculator.": "Hidup/mati-kan kalkulator Zeny.",
+  "Reset ZENY calculator.": "Atur ulang kalkulator Zeny.",
+  "Access endless tower anywhere.": "Mengakses Endless Tower di manapun.",
+  "Jump to specific floor.": "Lompat ke lantai tertentu.",
+  "Turn on/off UI Warp & UI Storage for NPCs": "Hidup/mati-kan UI Warp dan UI Storage untuk NPC.",
+  "Auto accepts incoming PT request.": "Terima langsung permintaan PT yang datang.",
+  "Auto accepts incoming ET request.": "Terima langsung permintaan ET yang datang.",
+  "Auto accepts incoming Follow request.": "Terima langsung permintaan Follow yang datang.",
 
   "__follow__": "_follow_",
-  "Turn on/off Auto Follow for Non-Party.": "Menyalakan atau mematikan auto Follow untuk non-party",
-  "Set leader id to follow.": "Menyetel id pemimpin untuk di follow",
-  "Set minimum follow radius.": "Menyetel jarak minimum follow",
+  "Turn on/off Auto Follow for Non-Party.": "Hidup/mati-kan Auto Follow untuk Non-Party.",
+  "Set leader id to follow.": "Atur ID Leader untuk Follow.",
+  "Set minimum follow radius.": "Atur radius minimum Follow.",
 
   "_hplant_": "_hplant_",
-  "Turn on/off Auto-Cast Hell Plant": "Menyalakan atau mematikan Auto-Cast Hell Plant",
-  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "Menyimpan koordinat saat ini sebagai letak Hell Plant",
+  "Turn on/off Auto-Cast Hell Plant": "Hidup/mati-kan Auto-Cast Hell Plant.",
+  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "Simpan koordinat saat ini sebagai titik penempatan Hell Plant. Dapat digunakan hingga 3 titik.",
 
   "_mvp_module_": "_mvp module_",
-  "Turn on/off MVP modoule.": "Menyalakan atau mematikan Modul MVP",
-  "Set tracking to auto or manual.": "Menyetel jalur untuk auto atau manual",
-  "Set notification and target to MVP/MINI/ALL only.": "Menyetel notifikasi dan target untuk MVP/MINI/ALL",
-  "Filter MVP Boards to MVP/MINI/ALL only.": "Filter papan MVP untuk MVP/MINI/ALL",
+  "Turn on/off MVP modoule.": "Hidup/mati-kan modul MVP.",
+  "Set tracking to auto or manual.": "Atur pelacakan menjadi otomatis atau manual.",
+  "Set notification and target to MVP/MINI/ALL only.": "Atur pemberitahuan dan target untuk MVP saja/Mini saja/Semua.",
+  "Filter MVP Boards to MVP/MINI/ALL only.": "Saring Papan MVO menjadi MVP saja/Mini saja/Semua.",
 
   "_class_specific_": "class specific",
-  "Turn on/off SAGE auto switch bolts module.": "Menyalakan atau mematikan Auto Bolt modul Sage",
-  "Turn on/off BOW class auto switch arrows module.": "Menyalakan atau mematikan Auto Switch panah modul untuk kelas BOW",
-  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "Menyalakan atau mematikan auto magnum break buff untuk SWORDSMAN",
+  "Turn on/off SAGE auto switch bolts module.": "Hidup/mati-kan modul auto switch bolts khusus kelas SAGE.",
+  "Turn on/off BOW class auto switch arrows module.": "Hidup/mati-kan modul auto switch arrows khusus kelas BOW.",
+  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "Hidup/mati-kan modul auto Magnum Break buff khusus kelas SWORDSMAN.",
 
   "_spot_search_": "spot search",
-  "List all available monsters and their ids in your current map.": "Daftar semua monster yang tersedia dan menunjukkan IDnya di map saat ini",
-  "Go to the nearest respawn spot of the selected monster.": "Pergi ke dekat titik respawn monster yang dipilih",
+  "List all available monsters and their ids in your current map.": "Daftar semua monster beserta ID yang tersedia di peta saat ini.",
+  "Go to the nearest respawn spot of the selected monster.": "Pergi ke titik respawn terdekat dari monster yang dipilih.",
 
-  "_gearswitch_": "Perpindahan equipment",
-  "Save your current equipment and card preset to specific slot.": "Menyimpan equip saat ini dan kartu di spesifikasi slot",
-  "Increase/Decrease maximum emoji gear switch.": "Menaikkan/Menurunkan emoji maximum pindah equipment",
+  "_gearswitch_": "",
+  "Save your current equipment and card preset to specific slot.": "Simpan equipment dan kartu saat ini ke slot spesifik.",
+  "Increase/Decrease maximum emoji gear switch.": "Naik/turun-kan maksimum emoji untuk Gear Switch.",
 
-  "_market_": "Pasar",
-  "Open Exchange Shop": "Membuka pasar exchange",
-  "Open Guild Donate Window": "Membuka papan Guild Donate",
-  "Open Shop Window": "Membuka papan Pasar",
+  "_market_": "",
+  "Open Exchange Shop": "Buka Exchange Shop.",
+  "Open Guild Donate Window": "Buka Donasi Guild.",
+  "Open Shop Window": "Buka Shop.",
 
-  "_warp_": "Warp",
-  "Change channel. (Channel or Country Code + Channel)": "Pindah channgel. (Channel atau kode negara + Channel)",
-  "Drop you to your born point.": "Kembali ke posisi awal poin",
-  "List all unlocked map.": "Daftar seluruh map yang telah di buka",
-  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "Pergi ke spesifik Map. (Membutuhkan: Cats/Pets/Npcs",
-  "Same as butterfly wing effect.": "Sama seperti efek butterfly wing",
-  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "Menggunakan layanan kafra warp dimana saja. (Membutuhkan: Cats/Pets/Npcs) ",
-  "Turn on/off warp emoji shortcuts.": "Menyalakan atau mematikan shortcuts emoji warp",
+  "_warp_": "",
+  "Change channel. (Channel or Country Code + Channel)": "Pindah Channel. (Channel atau Kode Negara + Channel)",
+  "Drop you to your born point.": "Pergi ke titik penyimpanan.",
+  "List all unlocked map.": "Daftar semua peta yang telah terbuka.",
+  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "Pergi ke peta tertentu. (Membutuhkan: Cat/Pet/NPC)",
+  "Same as butterfly wing effect.": "Sama seperti efek Butterfly Wing.",
+  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "Gunakan jasa warp Kafra di manapun. (Membutuhkan: Cat/Pet/NPC)",
+  "Turn on/off warp emoji shortcuts.": "Hidup/mati-kan jalan pintas emoji untuk warp.",
 
   "_multitarget_and_flylock_": "",
-  "List all available monsters and their ids in your current map.": "Daftar seluruh monster yang tersedia dan IDnya dimap saat ini",
-  "Set multiple ids as Auto-Battle target.": "Menyetel ID beberapa sebagai target Auto-Battle",
-  "Turn on/off Multi-Mob feature.": "Menyalakan atau mematikan fitur Multi-Mob",
-  "Turn on/off FlyLock feature.": "Menyalakan atau mematikan fitur FlyLock",
-  "Set multiple ids as FlyLock target.": "Menyetel ID beberapa sebagai taget FlyLock"
+  "List all available monsters and their ids in your current map.": "Daftar semua monster beserta ID yang tersedia di peta saat ini.",
+  "Set multiple ids as Auto-Battle target.": "Atur banyak ID sebagai target Auto-Battle.",
+  "Turn on/off Multi-Mob feature.": "Hidup/mati-kan fitur Multi-Mob.",
+  "Turn on/off FlyLock feature.": "Hidup/mati-kan fitur FlyLock.",
+  "Set multiple ids as FlyLock target.": "Atur banyak ID sebagai target FlyLock."
 }
