--- a/Translation/Malaysia/Text Strings.json
+++ b/Translation/Malaysia/Text Strings.json
@@ -1,111 +1,110 @@
 {
-  "Show all available commands.": "",
-  "Show all enabled modules.": "",
-  "Reset your settings to default. Useful when you messed up with the settings": "",
-  "Turn on/off Advance Target Information": "",
-  "Unlock and set FPS. Value: 1-120": "",
-  "Refresh client and dump cache.": "",
-  "Check your current latency.": "",
-  "Reconnect when you get disconnected.": "",
+  "Show all available commands.": "Paparkan semua tetapan",
+  "Show all enabled modules.": "Paparkan semua aturan yang telah dihidupkan",
+  "Reset your settings to default. Useful when you messed up with the settings": "Menetapkan semula aturan kepada yang asal. Berguna apabila anda melakukan kesilapan tetapan",
+  "Turn on/off Advance Target Information": "Hidupkan/matikan Maklumat Sasaran Terperinci",
+  "Unlock and set FPS. Value: 1-120": "Menghidupkan dan tetapkan FPS. Nilai: 1-120",
+  "Refresh client and dump cache.": "Mengemaskini client dan menghapuskan cache.",
+  "Check your current latency.": "Semak latensi semasa anda.",
+  "Reconnect when you get disconnected.": "Menyambung semula apabila anda terputus.",
 
   "__@afk__": "__@afk__",
-  "Turn on/off Auto TrickDead": "",
-  "Set hp/sp conditions to trigger.": "",
+  "Turn on/off Auto TrickDead": "Hidupkan/matikan Trickdead secara automatik",
+  "Set hp/sp conditions to trigger.": "Tetapkan tahap kondisi hp/sp untuk dicetuskan.",
 
   "__@as__": "__@as__",
-  "Turn on/off Auto Skill EX": "",
-  "List all available skills that can be extended.": "",
-  "Set your desired manual skill slot as AUTO": "",
-  "Reset current list.": "",
+  "Turn on/off Auto Skill EX": "Hidupkan/matikan EX Skill secara automatik",
+  "List all available skills that can be extended.": "Senaraikan semua skill yang ada yang boleh dilanjutkan.",
+  "Set your desired manual skill slot as AUTO": "Tetapkan slot skill manual yang anda kehendaki sebagai AUTO skill",
+  "Reset current list.": "Tetapkan semula senarai skill semasa.",
 
   "__@selftarget__": "__@selftarget__",
-  "Turn on/off Self-Target Module.": "",
-  "Activate Self-Target for all skills.": "",
-  "List all ID of AoE skills.": "",
-  "Set specific skill id as self-target.": "",
-  "Reset selt-target list.": "",
+  "Turn on/off Self-Target Module.": "Hidupkan / matikan Modul Sasaran-Sendiri.",
+  "Activate Self-Target for all skills.": "Aktifkan Sasaran Sendiri untuk semua skill.",
+  "List all ID of AoE skills.": "Senaraikan semua ID skill AoE.",
+  "Set specific skill id as self-target.": "Tetapkan id skill khusus sebagai sasaran sendiri.",
+  "Reset self-target list.": "Tetapkan semula senarai sasaran diri.",
 
   "__priestsupport__": "__priestsupport__",
-  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "",
-  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "",
-  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "",
-  "Reset buff list.": "",
-  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "",
+  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "Mematikan sekatan buffing beberapa buff skill yang boleh digunakan hanya apabila leader dalam perlawanan.",
+  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "Buff karekter tertentu walaupun bukan didalam party (Terhad hanya pada skill bukan-party seperti Heal/Kyrie/Bless/Resu) ",
+  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "Tetapkan id tertentu untuk di buff. (Pintasan: whisper '-buffme' kepada priest)",
+  "Reset buff list.": "Tetapkan semula senarai buff.",
+  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "Hidupkan/matikan skill priest debuffer secara automatik. (Lex and Decrease Agi)",
 
   "__autoquest__": "__autoquest__",
-  "Turn on/off Quest Assistant.": "",
-  "Turn on/off Questing Warping upon accepting quest.": "",
+  "Turn on/off Quest Assistant.": "Hidupkan/matikan modul Pembantu Quest",
+  "Turn on/off Questing Warping upon accepting quest.": "Hidupkan/matikan warp secara automatik apabila menerima sesuatu quest",
 
   "__autosuicide__": "__autoquest__",
-  "Turn on/off Auto Suicide.": "",
-  "Save current coordinate and map for leveling down.": "",
+  "Turn on/off Auto Suicide.": "Hidupkan/matikan modul Bunuh Diri",
+  "Save current coordinate and map for leveling down.": "Simpan koordinat semasa dan peta untuk menurunkan level.",
 
   "__lockspot__": "__lockspot__",
-  "Turn on/off lockspot module.": "",
-  "Set farming radius. Radius can be set from 0 to 200.": "",
-  "Save your current coordinate as return piont.": "",
+  "Turn on/off lockspot module.": "Hidupkan/matikan modul kunci-spot.",
+  "Set farming radius. Radius can be set from 0 to 200.": "Tetapkan radius untuk farm. Radius boleh ditetapkan dari 0 hingga 200.",
+  "Save your current coordinate as return point.": "Simpan koordinat semasa anda sebagai titik kembali.",
 
   "__autoflywing__": "__autoflywing__",
-  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "",
-
+  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "Hidupkan / matikan auto flywing apabila HP anda jatuh di bawah 30%. Ia akan menggunakan skill TrickDead untuk memulihkan HP anda.",
   "__calculator__": "__calculator__",
-  "Turn on/off EXP calculator.": "",
-  "Reset EXP calculator.": "",
-  "Turn on/off ZENY calculator.": "",
-  "Reset ZENY calculator.": "",
-  "Access endless tower anywhere.": "",
-  "Jump to specific floor.": "",
-  "Turn on/off UI Warp & UI Storage for NPCs": "",
-  "Auto accepts incoming PT request.": "",
-  "Auto accepts incoming ET request.": "",
-  "Auto accepts incoming Follow request.": "",
+  "Turn on/off EXP calculator.": "Hidupkan/matikan pengira EXP",
+  "Reset EXP calculator.": "Tetapkan semula pengiraan EXP",
+  "Turn on/off ZENY calculator.": "Hidupkan/matikan pengira ZENY",
+  "Reset ZENY calculator.": "Tetapkan semula pengiraan ZENY.",
+  "Access endless tower anywhere.": "Akses endless tower dari mana-mana sahaja",
+  "Jump to specific floor.": "Lompat ke tingkat tertentu.",
+  "Turn on/off UI Warp & UI Storage for NPCs": "Hidupkan / matikan UI Warp & Penyimpanan UI untuk NPC",
+  "Auto accepts incoming PT request.": "Hidupkan aturan menerima permintaan untuk masuk PT secara automatik",
+  "Auto accepts incoming ET request.": "Hidupkan aturan menerima permintaan untuk masuk ET secara automatik",
+  "Auto accepts incoming Follow request.": "Hidupkan aturan menerima permintaan untuk mengikuti secara automatik",
 
   "__follow__": "_follow_",
-  "Turn on/off Auto Follow for Non-Party.": "",
-  "Set leader id to follow.": "",
-  "Set minimum follow radius.": "",
+  "Turn on/off Auto Follow for Non-Party.": "Hidupkan/matikan aturan mengikuti untuk Bukan-Party secara automatik.",
+  "Set leader id to follow.": "Tetapkan id leader untuk diikuti.",
+  "Set minimum follow radius.": "Tetapkan radius minima untuk diikuti.",
 
   "_hplant_": "_hplant_",
-  "Turn on/off Auto-Cast Hell Plant": "",
-  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "",
+  "Turn on/off Auto-Cast Hell Plant": "Hidupkan/matikan penggukan skill Hell Plant secara automatik",
+  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "Simpan koordinat semasa sebagai titik menggunakan Hell Plant. Boleh digunakan sehingga 3 tempat.",
 
   "_mvp_module_": "_mvp module_",
-  "Turn on/off MVP modoule.": "",
-  "Set tracking to auto or manual.": "",
-  "Set notification and target to MVP/MINI/ALL only.": "",
-  "Filter MVP Boards to MVP/MINI/ALL only.": "",
+  "Turn on/off MVP module.": "Hidupkan/matikan modul MVP.",
+  "Set tracking to auto or manual.": "Tetapkan penjejakan kepada automatik atau manual.",
+  "Set notification and target to MVP/MINI/ALL only.": "Tetapkan pemberitahuan dan sasaran kepada MVP/MINI/SEMUA sahaja.",
+  "Filter MVP Boards to MVP/MINI/ALL only.": "Tetapkan Paparan MVP board kepada MVP/MINI/SEMUA sahaja.",
 
   "_class_specific_": "class specific",
-  "Turn on/off SAGE auto switch bolts module.": "",
-  "Turn on/off BOW class auto switch arrows module.": "",
-  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "",
+  "Turn on/off SAGE auto switch bolts module.": "Hidupkan/matikan modul SAGE tukarkan bolts secara automatik",
+  "Turn on/off BOW class auto switch arrows module.": "Hidupkan/matikan modul pengguna BOW tukarkan arrows secara automatik",
+  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "Hidupkan/matikan modul SWORDSMAN menggukan skill Magnum Break secara automatik",
 
   "_spot_search_": "spot search",
-  "List all available monsters and their ids in your current map.": "",
-  "Go to the nearest respawn spot of the selected monster.": "",
+  "List all available monsters and their ids in your current map.": "Senaraikan semua monster dan id mereka dalam peta semasa anda.",
+  "Go to the nearest respawn spot of the selected monster.": "Pergi ke tempat respawn terdekat dari monster yang dipilih.",
 
   "_gearswitch_": "",
-  "Save your current equipment and card preset to specific slot.": "",
-  "Increase/Decrease maximum emoji gear switch.": "",
+  "Save your current equipment and card preset to specific slot.": "Simpan peralatan semasa anda dan kad pratetap ke slot tertentu.",
+  "Increase/Decrease maximum emoji gear switch.": "Meningkatkan/Kurangkan penukaran gear emoji ke maksimum.",
 
   "_market_": "",
-  "Open Exchange Shop": "",
-  "Open Guild Donate Window": "",
-  "Open Shop Window": "",
+  "Open Exchange Shop": "Bukakan Exchange Shop",
+  "Open Guild Donate Window": "Bukakan Guild Donate Window",
+  "Open Shop Window": "Bukakan Shop Window",
 
   "_warp_": "",
-  "Change channel. (Channel or Country Code + Channel)": "",
-  "Drop you to your born point.": "",
-  "List all unlocked map.": "",
-  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "",
-  "Same as butterfly wing effect.": "",
-  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "",
-  "Turn on/off warp emoji shortcuts.": "",
+  "Change channel. (Channel or Country Code + Channel)": "Tukar saluran. (Saluran atau Kod Negara + Saluran)",
+  "Drop you to your born point.": "Letakkan anda ke titik lahir anda.",
+  "List all unlocked map.": "Senaraikan semua peta yang telah dibuka.",
+  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "Pergi ke peta tertentu. (Keperluan: Cats/Pets/Npcs)",
+  "Same as butterfly wing effect.": "Sama seperti kesan butterfly wing.",
+  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "Gunakan perkhidmatan warp kafra di mana-mana sahaja. Keperluan: Cats/Pets/Npcs)",
+  "Turn on/off warp emoji shortcuts.": "Hidupkan / matikan aturan warp menggunakan emoji shortcuts.",
 
   "_multitarget_and_flylock_": "",
-  "List all available monsters and their ids in your current map.": "",
-  "Set multiple ids as Auto-Battle target.": "",
-  "Turn on/off Multi-Mob feature.": "",
-  "Turn on/off FlyLock feature.": "",
-  "Set multiple ids as FlyLock target.": ""
+  "List all available monsters and their ids in your current map.": "Senaraikan semua monster dan id mereka dalam peta semasa anda.",
+  "Set multiple ids as Auto-Battle target.": "Tetapkan beberapa id sebagai sasaran Auto-Battle.",
+  "Turn on/off Multi-Mob feature.": "Hidupkan/matikan penggunaan Multi-Mob.",
+  "Turn on/off FlyLock feature.": "Hidupkan/matikan penggunaan FlyLock.",
+  "Set multiple ids as FlyLock target.": "Tetapkan beberapa ID sebagai sasaran FlyLock."
 }
